호스팅 오류 해결

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-disney-plus-app",
-  "homepage": "https://chohe3212.github.io/react-disney-plus-app",
+  "homepage": "https://disney-plus-react-app-447e0.web.app",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
